<resources>
    <string name="aa_bt_tips">Please make sure that Bluetooth is connected</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_us">About</string>
    <string name="activation">Activation</string>
    <string name="activation_cancel_fail">Deactivation failed</string>
    <string name="activation_cancel_success">Deactivation succeeded</string>
    <string name="activation_check_code">Please input the correct code</string>
    <string name="activation_check_sn_invalid">Invalid sn</string>
    <string name="activation_fail">Activation failed</string>
    <string name="activation_file_fail">Activation file creation failed</string>
    <string name="activation_network_state">Network state: %1$s</string>
    <string name="activation_success">Activation succeeded</string>
    <string name="aec_algorithm1">Algorithm 1</string>
    <string name="aec_algorithm2">Algorithm 2</string>
    <string name="aec_algorithm3">Algorithm 3</string>
    <string name="aec_algorithm4">Algorithm 4</string>
    <string name="aec_delay_title">Delay</string>
    <string name="aec_mode">Echo Cancellation</string>
    <string name="android_wired_step1_title1">Please scan the QR code</string>
    <string name="android_wired_step2_title1">Connect to Bluetooth</string>
    <string name="android_wired_step2_title2">Click Start Mirroring</string>
    <string name="android_wireless_step2_tip">Click the button to continue</string>
    <string name="android_wireless_step2_title1">Connect to Bluetooth</string>
    <string name="android_wireless_step2_title2">Turn on Personal Hotspot</string>
    <string name="android_wireless_step3_tip">WiFi is connected to:</string>
    <string name="android_wireless_step4_title1">Click the button</string>
    <string name="android_wireless_step4_title2">\"Start Mirroring\" on your phone</string>
    <string name="android_wireless_step4_title3">to continue</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="api_error_code_0">Succeed</string>
    <string name="api_error_code_100">Invalid parameters</string>
    <string name="api_error_code_101">Activation code has been used</string>
    <string name="api_error_code_102">Invalid activation code</string>
    <string name="api_error_code_103">Please try again later</string>
    <string name="api_error_code_104">Too frequently, please try again later</string>
    <string name="api_error_code_201">Device is not activated</string>
    <string name="api_error_code_202">No activation code is available, please contact your local dealer to buy</string>
    <string name="api_error_code_203">Invalid device sn</string>
    <string name="api_error_code_204">Invalid sid</string>
    <string name="api_error_code_205">Device id already exists</string>
    <string name="api_error_code_206">Device sn does not match history</string>
    <string name="api_error_code_301">The network is busy, please try again later</string>
    <string name="app_cannot_run_without_permissions_granted">Without some permissions, the Zlink app will not work properly, please open the settings to grant permissions</string>
    <string name="app_name">X-Car</string>
    <string name="app_permissions_request">Permissions Request</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_code">Activate with activation code</string>
    <string name="auth_fail_title">Unactivated</string>
    <string name="auth_hint">Enter activation code here</string>
    <string name="auth_scan_qrcode">Scan the QR code to activate</string>
    <string name="auth_scan_qrcode_msg">Please use the Zhijian Activation APP to scan the QR code on the left to activate the software. (Click the picture to enlarge)During the activation, please make sure that the car is connected to the Internet. Please refresh the activation result after scanning the QR code.</string>
    <string name="auth_scan_qrcode_refresh">Refresh Activation Result</string>
    <string name="auth_success_msg">Note: Reactivation is needed after cancellation, otherwise, the software will not work normally.</string>
    <string name="auth_success_title">Activated</string>
    <string name="auth_unbind">Deactivate</string>
    <string name="back_to_hu">Back to HU</string>
    <string name="bg_conn">Background Connection</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bt_name_pattern">BT Name： %1$s</string>
    <string name="cancel">Cancel</string>
    <string name="carplay">CarPlay</string>
    <string name="carplay_resize_tip">Resolution change detected, need to reload</string>
    <string name="change_connect">Wifi Settings</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_no_mfi">"The MFI chip is not detected and the CarPlay feature won't work."</string>
    <string name="check_update">Check for Updates</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="confirm">Ok</string>
    <string name="connecting">Connecting…</string>
    <string name="connecting2">connecting</string>
    <string name="connection_enable">Enable Carplay/Android Auto</string>
    <string name="connection_enable_tips">Once this feature is enable,CarPlay/Android Auto may be enabled when the phone is connected to the device.</string>
    <string name="connection_error">Connection Error</string>
    <string name="connection_error_tips" formatted="false">%s is in use, please disconnect %s and reconnect again!</string>
    <string name="continue_activation_without_mfi">"The MFI chip is not detected and the CarPlay feature won't work. Do you want to continue activation?"</string>
    <string name="copyright">Copyright ©2009–2021 www.zjinnova.com. All rights reserved.</string>
    <string name="default_connection_last">Last Mode</string>
    <string name="default_connection_link">Link Mode First</string>
    <string name="default_connection_mirror">Mirroring Mode First</string>
    <string name="default_connection_type">Default Connection Type</string>
    <string name="device_info">Device Info</string>
    <string name="device_info_display">DISPLAY</string>
    <string name="device_info_features">FEATURES</string>
    <string name="device_info_format">"Version：V%1$s
ID: %2$s
SN: %3$s"</string>
    <string name="device_info_id">ID</string>
    <string name="device_info_key">KEY</string>
    <string name="device_info_platform">PLATFORM</string>
    <string name="device_info_sn">SN</string>
    <string name="device_info_wireless">WIRELESS</string>
    <string name="device_zlink_lib_ver">VERSION</string>
    <string name="dialog_bt_connect_title">Connect to Bluetooth during %s</string>
    <string name="dialog_bt_disconnect_msg">Do not remind me</string>
    <string name="dialog_bt_disconnect_title">Do not connect to Bluetooth during %s</string>
    <string name="dialog_check_activation">Checking activation status, please wait…</string>
    <string name="dialog_check_wifi_content">Check if the device is connected to the Internet and try again.</string>
    <string name="dialog_check_wifi_set_wifi">Set WIFI</string>
    <string name="dialog_check_wifi_title">Unactivated</string>
    <string name="dialog_download_content">Downloading, please wait…</string>
    <string name="dialog_download_title">Downloading</string>
    <string name="dialog_upgrade_confirm_tips">Update now?</string>
    <string name="dialog_upgrade_confirm_title">New version detected</string>
    <string name="disclaimers">Declaration</string>
    <string name="do_next_time">Update later</string>
    <string name="first_connect">connection succeeded</string>
    <string name="first_connect_confirm">I Know</string>
    <string name="first_connect_notice_down">Experience</string>
    <string name="first_connect_notice_up">It will automatically connect to Bluetooth next time you get in the car</string>
    <string name="first_connect_senseless">senseless connection</string>
    <string name="input_activation_Factory">Please input the factory setting password</string>
    <string name="no_mfi_found">MFI Error</string>
    <string name="reloading_tip">Reloading...</string>
    <string name="special_supply_for_mod">This version is only for the modified market</string>
    <string name="tv_ok">OK(%d)</string>
    <string name="upgrade_now">Update now</string>
    <string name="zjinnova">Produced by Zjinnova Tech(Beijing) Co., Ltd.</string>
</resources>