<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/bg_layout_black_36373b_21" android:padding="12.0dip" android:layout_width="320.0dip" android:layout_height="200.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView android:textSize="19.0sp" android:textStyle="bold" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/first_connect" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="11.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.AppCompatImageView android:layout_width="23.0dip" android:layout_height="33.0dip" android:scaleType="fitCenter" app:srcCompat="@drawable/ic_first_connect_icon" />
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="11.0dip">
            <TextView android:textSize="16.0sp" android:textColor="@color/white" android:id="@id/first_connected_notice_up" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/first_connect_notice_up" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textSize="16.0sp" android:textColor="@color/white" android:id="@id/first_connected_notice_down" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/first_connect_notice_down" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/first_connected_notice_up" />
            <TextView android:textSize="@dimen/btn_text_size" android:textColor="#ffff7300" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/first_connect_senseless" app:layout_constraintStart_toEndOf="@id/first_connected_notice_down" app:layout_constraintTop_toBottomOf="@id/first_connected_notice_up" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/first_connected_confirm" android:background="@drawable/selector_bg_dialog_btn_positive" android:layout_width="280.0dip" android:layout_height="40.0dip" android:layout_marginTop="15.0dip" android:text="@string/first_connect_confirm" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>