<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/bg_layout_black_36373b_21" android:padding="20.0dip" android:layout_width="320.0dip" android:layout_height="200.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView android:textSize="19.0sp" android:textStyle="bold" android:textColor="@color/white" android:id="@id/dialog_check_wifi_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_mfi_found" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="16.0sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/check_no_mfi" app:layout_constraintBottom_toTopOf="@id/btn_know" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/dialog_check_wifi_title" />
    <androidx.appcompat.widget.AppCompatButton android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_know" android:background="@drawable/selector_bg_dialog_btn_positive" android:layout_width="240.0dip" android:layout_height="35.0dip" android:layout_marginTop="15.0dip" android:text="@string/confirm" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>