<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/fragment_about_us_0" android:background="@color/page_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/app_bar" android:background="@android:color/black" android:layout_width="fill_parent" android:layout_height="60.0dip" app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.AppCompatButton android:id="@id/btn_back" android:background="@drawable/selector_ic_back" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginStart="10.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="27.0sp" android:textStyle="bold" android:gravity="center|left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_us" android:layout_marginStart="30.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@id/btn_back" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View android:id="@id/divider" android:background="#ff3c3d42" android:layout_width="fill_parent" android:layout_height="2.0dip" app:layout_constraintTop_toBottomOf="@id/app_bar" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/logo_info" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@id/btn_disclaimers" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/divider">
        <androidx.appcompat.widget.AppCompatImageView android:id="@id/zlink_logo" android:layout_width="160.0dip" android:layout_height="0.0dip" android:scaleType="fitCenter" app:layout_constraintDimensionRatio="2.7:1" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_about_us_logo" />
        <androidx.appcompat.widget.AppCompatTextView android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/tv_zjinnova" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/zjinnova" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/zlink_logo" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="12.0sp" android:textColor="#ff8d8d8d" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/special_supply_for_mod" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_zjinnova" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.appcompat.widget.AppCompatButton android:textSize="14.0sp" android:textStyle="bold" android:textColor="@drawable/selector_color_highlight" android:id="@id/btn_disclaimers" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="43.0dip" android:minWidth="138.0dip" android:text="@string/disclaimers" android:singleLine="true" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" app:layout_constraintBottom_toTopOf="@id/app_ver" app:layout_constraintEnd_toStartOf="@id/btn_device_info" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent" />
    <androidx.appcompat.widget.AppCompatButton android:textSize="14.0sp" android:textStyle="bold" android:textColor="@drawable/selector_color_highlight" android:id="@id/btn_device_info" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="43.0dip" android:minWidth="138.0dip" android:text="@string/device_info" android:singleLine="true" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" app:layout_constraintBottom_toTopOf="@id/app_ver" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/btn_disclaimers" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="12.0sp" android:textColor="@android:color/white" android:id="@id/app_ver" android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="6.0dip" android:singleLine="true" app:layout_constraintBottom_toTopOf="@id/tv_copyright" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_goneMarginBottom="80.0dip" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="12.0sp" android:textColor="#ff8d8d8d" android:id="@id/tv_copyright" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/copyright" android:singleLine="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>