<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/bg_dialog_bt_disconnect" android:layout_width="400.0dip" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.AppCompatTextView android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/bt_disconnect_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/dialog_bt_disconnect_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <androidx.appcompat.widget.AppCompatCheckBox android:textSize="12.0sp" android:textColor="#ff2c2c2c" android:gravity="center_vertical" android:id="@id/bt_disconnect_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:button="@drawable/selector_checkbox2" android:text="@string/dialog_bt_disconnect_msg" app:layout_constraintStart_toStartOf="@id/bt_disconnect_title" app:layout_constraintTop_toBottomOf="@id/bt_disconnect_title" />
        <View android:id="@id/bt_disconnect_view" android:background="#ffb5b5b5" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="10.0dip" app:layout_constraintTop_toBottomOf="@id/bt_disconnect_checkbox" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="15.0sp" android:textColor="#ff0076ff" android:gravity="center_horizontal" android:id="@id/tv_ok" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tv_ok" app:layout_constraintTop_toBottomOf="@id/bt_disconnect_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>