<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/bg_layout_black_36373b_21" android:padding="12.0dip" android:layout_width="320.0dip" android:layout_height="200.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView android:textSize="19.0sp" android:textStyle="bold" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/input_activation_Factory" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatEditText android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/factory_input_password_et" android:background="@drawable/selector_bg_dialog_input_password" android:focusable="true" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="280.0dip" android:layout_height="43.0dip" android:singleLine="true" android:maxLength="8" android:inputType="number" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatButton android:textSize="13.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/factory_input_password_confirm" android:background="@drawable/selector_bg_dialog_btn_positive" android:layout_width="140.0dip" android:layout_height="35.0dip" android:layout_marginTop="15.0dip" android:text="@string/confirm" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <androidx.appcompat.widget.AppCompatButton android:textSize="13.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/factory_input_password_cancel" android:background="@drawable/selector_bg_dialog_btn_negative" android:layout_width="140.0dip" android:layout_height="35.0dip" android:layout_marginTop="15.0dip" android:text="@string/cancel" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>