<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/dialog_resize_carplay_confirm_0" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textColor="@android:color/white" android:id="@id/loading_tips" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reloading_tip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/cl_dialog" android:background="@drawable/bg_dialog_bt_disconnect" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="30.0dip" android:paddingEnd="30.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.AppCompatTextView android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/bt_disconnect_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/carplay_resize_tip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <androidx.appcompat.widget.AppCompatCheckBox android:textSize="12.0sp" android:textColor="#ff2c2c2c" android:gravity="center_vertical" android:id="@id/cb_remember_choice" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:button="@drawable/selector_checkbox2" android:text="@string/dialog_bt_disconnect_msg" app:layout_constraintStart_toStartOf="@id/bt_disconnect_title" app:layout_constraintTop_toBottomOf="@id/bt_disconnect_title" />
        <View android:id="@id/bt_disconnect_view" android:background="#ffb5b5b5" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_marginTop="10.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/cb_remember_choice" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="15.0sp" android:textColor="@color/color_button_ok" android:gravity="center_horizontal" android:id="@id/tv_ok" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@android:string/ok" app:layout_constraintEnd_toStartOf="@id/tv_cancel" app:layout_constraintHorizontal_chainStyle="spread" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/bt_disconnect_view" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="15.0sp" android:textColor="@color/color_button_ok" android:gravity="center_horizontal" android:id="@id/tv_cancel" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@android:string/cancel" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/tv_ok" app:layout_constraintTop_toBottomOf="@id/bt_disconnect_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>